Added docker env/proxy capability to manifest generation.
[#139670355]

Signed-off-by: Josh Winters <jwinters@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -92,6 +92,7 @@ instance_groups:
         ip_masq: false
         log_level: error
         storage_driver: overlay
+        env: {}
   - name: kubeconfig
     release: kubo
     properties:
