--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -1,4 +1,4 @@
-internal_ip: # Internal ip address of the BOSH director. Please select an available ip address in the network you wish to deploy into. 
+internal_ip: # Internal ip address of the BOSH director. Please select an available ip address in the network you wish to deploy into.
 
 deployments_network: # Network name to deploy service in your cloud config
 
@@ -29,3 +29,7 @@ stemcell_url: # path to a stemcell used in all Kubo deployments
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
 kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 
+# uncomment these fields to configure proxy settings for docker
+# http_proxy:
+# https_proxy:
+# no_proxy:
