--- a/warden/cloud-config.yml
+++ b/warden/cloud-config.yml
@@ -15,6 +15,7 @@ networks:
   type: manual
   subnets:
   - azs: [z1, z2, z3]
+    dns: [8.8.8.8]
     range: 10.244.0.0/24
     gateway: 10.244.0.1
     static: [10.244.0.34]
