Add NATS properties: port, username
[#143113113]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -7,7 +7,9 @@ routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
 routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
 routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
 routing-cf-app-domain-name: # Cloud Foundry apps domain
-routing-cf-nats-internal-ip: # Internal IP address of Cloud Foundry NATS
+routing-cf-nats-internal-ips: # An array of internal IP address of Cloud Foundry NATS, e.g. [ '1.2.3.4' ]
+routing-cf-nats-username: nats
+routing-cf-nats-port: 4222
 
 # we use BOSH 261 since CredHub 0.4 supports only it
 # CredHub 0.4 fixes important bug that breaks deployment
