--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -130,10 +130,9 @@ instance_groups:
         skip_tls_verification: true
         app_domain: ((routing-cf-app-domain-name))
       nats:
-        machines:
-        - ((routing-cf-nats-internal-ip))
-        port: 4222
-        user: nats
+        machines: ((routing-cf-nats-internal-ips))
+        port: ((routing-cf-nats-port))
+        user: ((routing-cf-nats-username))
         password: ((routing-cf-nats-password))
   - name: nginx
     release: kubo
