--- a/bosh-lite-runc.yml
+++ b/bosh-lite-runc.yml
@@ -9,9 +9,9 @@
   path: /releases/-
   value:
     name: garden-runc
-    version: 1.1.1
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.1.1-ubuntu-trusty-3312.15-20170120-025258-725649478-20170120025303.tgz?versionId=LM5X6WRr_SSQkCpTDg197bRwr8YQxWqP
-    sha1: 72748d8ddad788f2092fe121e6944c90cfd3b5d2
+    version: "1.6.0"
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.6.0-ubuntu-trusty-3363.20-20170505-155950-147762079-20170505155956.tgz?versionId=DNopG3gqI9AbTzMddjmAIvIJetuuh6LY
+    sha1: 1d23658d62cc19bdf28b0d4e6388dd00c7c13bc7
 
 - type: replace
   path: /instance_groups/name=bosh/properties/garden
