Squashed 'bosh-deployment/' changes from a413d33..01bf99c
01bf99c use ((internal_ip)) for accessing credhub
cdf37d8 bump down garden-runc to 1.1.1
2f0e6ab fix doc url
4fabd8d mention jumpbox user
051b86c point to some cli docs
0bc2b2f Updated for CredHub v0.7.0+
0ae3760 bump to 261
211ef29 docker: add dns to cloud-config
92fde32 warden: add dns to cloud-config
775458e use internal ip for powerdns address
2fe1323 changed sl_apiKey to sl_api_key
2e39156 Removed feature options and added more azs
54e40e7 A workable version for Softlayer
b124dab add vcloud
a2cf282 mention about vm reboots
febcb79 Merge pull request #61 from drnic/patch-1
5062609 bump to bosh-virtualbox-cpi 0.0.11
b7ac296 Merge pull request #64 from drnic/aws-reserved-ips
177f20e AWS subnets reserve the first 4 IPs [fixes #62]
7722377 How to get zookeeper-release; fix path to manifest
b1ef88a remove incorrect azure cc defs
91f2ae9 add external ip for uaa (not recommended)
b7aa6b4 Merge pull request #56 from cloudfoundry/deprecate-m3
a2794a3 Use m4 instance types, not m3
e788bb4 Merge pull request #50 from christianang/bump-google-cpi
0484723 Bump BOSH-Google-CPI to 25.6.2
75d6dea Merge pull request #38 from AbelHu/abelhu
e7001fb Merge pull request #41 from voelzmo/remove_registry_http
2636573 Merge pull request #45 from drnic/ignore-tmp
fb717de Merge pull request #48 from voelzmo/add_ca_to_cloud_provider
ba35191 Also add custom CA to cloud_provider for create-env
aa5f2ec ignore tmp dir to allow playtime
b84c7c9 simplify nats-tls.yml
d3c3ac0 add dev/nats-tls.yml to bosh-deployment
c52d75c Remove registry.http properties
1f75c3b Merge pull request #40 from christopherclark/master
01eae27 Create LICENSE
2fa02f1 Create NOTICE
2693786 add dev folder for currently in dev features
1e2fc50 bump to bosh-virtualbox-cpi 0.0.10
eb979d5 Add cloud-config and custom-environment for Azure
b52bcb7 Add external-db opsfile
b50ee61 bump to bosh-docker-cpi 0.0.2
82d1e05 bosh lite backed by docker
e227132 Use docker-cpi-relea

--- a/credhub.yml
+++ b/credhub.yml
@@ -1,19 +1,19 @@
-# CredHub release file location must be provided 
 - type: replace
   path: /releases/-
   value:
     name: credhub
-    url: ((file_path_to_credhub_release))
+    version: 0.7.0
+    url: https://bosh.io/d/github.com/pivotal-cf/credhub-release?v=0.7.0
+    sha1: c1d0eb7e0b1a03831cd102b740b47673cda9b350
 
-# A chosen dev_key value must be provided in the form of 32 hex characters 
 - type: replace
   path: /instance_groups/name=bosh/jobs/-
   value:
     name: credhub
     release: credhub
     properties:
-      credhub: 
-        user_management:
+      credhub:
+        authentication:
           uaa:
             url: "https://((internal_ip)):8443"
             verification_key: ((uaa_jwt_signing_key.public_key))
@@ -26,8 +26,13 @@
           database: credhub
         tls: ((credhub_tls))
         encryption:
-          provider: dev_internal
-          dev_key: ((credhub_dev_key))
+          providers:
+          - name: internal
+            type: internal
+          keys:
+          - provider_name: internal
+            encryption_password: ((credhub_encryption_password))
+            active: true
 
 - type: replace
   path: /instance_groups/name=bosh/properties/postgres/additional_databases?/-
@@ -58,7 +63,7 @@
     secret: ((uaa_clients_director_to_credhub))
 
 - type: replace
-  path: /instance_groups/name=bosh/jobs/name=uaa/properties/uaa/clients/credhub?
+  path: /instance_groups/name=bosh/jobs/name=uaa/properties/uaa/clients/credhub_cli?
   value:
     override: true
     authorized-grant-types: password,refresh_token
@@ -73,7 +78,7 @@
   value:
     name: credhub-cli
     password: ((credhub_cli_password))
-    groups: 
+    groups:
     - credhub.read
     - credhub.write
 
@@ -100,6 +105,12 @@
       ca: credhub_ca
       common_name: ((internal_ip))
       alternative_names: [((internal_ip))]
+
+- type: replace
+  path: /variables/-
+  value:
+    name: credhub_encryption_password
+    type: password
 
 - type: replace
   path: /variables/-
