--- a/azure/cloud-config.yml
+++ b/azure/cloud-config.yml
@@ -1,23 +1,15 @@
 azs:
 - name: z1
-  cloud_properties:
-    availability_zone: ((az))
 - name: z2
-  cloud_properties:
-    availability_zone: ((az))
 - name: z3
-  cloud_properties:
-    availability_zone: ((az))
 
 vm_types:
 - name: default
   cloud_properties:
-    instance_type: m4.large
-    ephemeral_disk: {size: 25_000}
+    instance_type: Standard_D1
 - name: large
   cloud_properties:
-    instance_type: m4.xlarge
-    ephemeral_disk: {size: 50_000}
+    instance_type: Standard_D3
 
 disk_types:
 - name: default
@@ -32,10 +24,12 @@ networks:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
     azs: [z1, z2, z3]
-    dns: [8.8.8.8]
+    dns: [168.63.129.16]
     reserved: [((internal_gw))/30]
     cloud_properties:
-      subnet: ((subnet_id))
+      virtual_network_name: ((vnet_name))
+      subnet_name: ((subnet_name))
+      security_group: ((security_group))
 - name: vip
   type: vip
 
