--- a/azure/custom-environment.yml
+++ b/azure/custom-environment.yml
@@ -2,27 +2,28 @@
 - type: replace
   path: /releases/-
   value:
-    name: bosh-openstack-cpi
-    version: 27
-    url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-openstack-cpi-release?v=27
-    sha1: 85e6244978f775c888bbd303b874a2c158eb43c4
+    name: bosh-azure-cpi
+    version: 20
+    url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-azure-cpi-release?v=20
+    sha1: fb0180c685714d064b5a467eb6f2b34388fadf0a
 
 - type: replace
   path: /resource_pools/name=vms/stemcell?
   value:
-    url: https://bosh.io/d/stemcells/bosh-openstack-kvm-ubuntu-trusty-go_agent?v=3363.20
-    sha1: bc8096c0d817b407aed15af487bd6d5f4ad069f7
+    url: https://bosh.io/d/stemcells/bosh-azure-hyperv-ubuntu-trusty-go_agent?v=3312.15
+    sha1: 109fae8106f8dba70f3dd6f1c5061907afb03757
 
 # Configure sizes
 - type: replace
   path: /resource_pools/name=vms/cloud_properties?
   value:
-    instance_type: m1.xlarge
-    availability_zone: ((az))
+    instance_type: Standard_D1
 
 - type: replace
   path: /networks/name=default/subnets/0/cloud_properties?
-  value: {net_id: ((net_id))}
+  value:
+    virtual_network_name: ((vnet_name))
+    subnet_name: ((subnet_name))
 
 # Enable registry job
 - type: replace
@@ -42,38 +43,42 @@
       password: ((postgres_password))
       database: bosh
       adapter: postgres
+    http:
+      user: registry
+      password: ((registry_password))
+      port: 25777
     username: registry
     password: ((registry_password))
     port: 25777
-    endpoint: http://registry:((registry_password))@((internal_ip)):25777
 
 # Add CPI job
 - type: replace
   path: /instance_groups/name=bosh/jobs/-
   value: &cpi_job
-    name: openstack_cpi
-    release: bosh-openstack-cpi
+    name: azure_cpi
+    release: bosh-azure-cpi
 
 - type: replace
   path: /instance_groups/name=bosh/properties/director/cpi_job?
-  value: openstack_cpi
+  value: azure_cpi
 
 - type: replace
   path: /cloud_provider/template?
   value: *cpi_job
 
 - type: replace
-  path: /instance_groups/name=bosh/properties/openstack?
-  value: &openstack
-    auth_url: ((auth_url))
-    username: ((openstack_username))
-    api_key: ((openstack_password))
-    domain: ((openstack_domain))
-    project: ((openstack_project))
-    region: ((region))
-    default_key_name: ((default_key_name))
-    default_security_groups: ((default_security_groups))
-    human_readable_vm_names: true
+  path: /instance_groups/name=bosh/properties/azure?
+  value: &cpi_conf
+    environment: ((environment))
+    subscription_id: ((subscription_id))
+    tenant_id: ((tenant_id))
+    client_id: ((client_id))
+    client_secret: ((client_secret))
+    resource_group_name: ((resource_group_name))
+    storage_account_name: ((storage_account_name))
+    default_security_group: ((default_security_group))
+    ssh_user: vcap
+    ssh_public_key: ((ssh.public_key))
 
 - type: replace
   path: /cloud_provider/ssh_tunnel?
@@ -81,11 +86,17 @@
     host: ((internal_ip))
     port: 22
     user: vcap
-    private_key: ((private_key))
+    private_key: ((ssh.private_key))
 
 - type: replace
-  path: /cloud_provider/properties/openstack?
-  value: *openstack
+  path: /cloud_provider/properties/azure?
+  value: *cpi_conf
+
+- type: replace
+  path: /variables/-
+  value:
+    name: ssh
+    type: ssh
 
 - type: replace
   path: /variables/-
