Generate Certificates with variables section
You can generate the certificates like shown in this PR. This generates a common CA and two certificates for the master and kubelet.

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -140,3 +140,22 @@ variables:
   type: password
 - name: kubelet-password
   type: password
+- name: tls-ca
+  type: certificate 
+  options: 
+    common_name: "KuBo CA"
+    is_ca: true
+- name: tls-kubernetes
+  type: certificate 
+  options: 
+    ca: tls-ca
+    common_name: *kubo_url
+    alternative_names: 
+    - *kubo_url
+- name: tls-kubelet
+  type: certificate 
+  options: 
+    ca: tls-ca
+    common_name: *kubo_url
+    alternative_names: 
+    - *kubo_url
