Added gob-mock dependency

--- a/src/kubo-deployment-tests/glide.yaml
+++ b/src/kubo-deployment-tests/glide.yaml
@@ -3,3 +3,4 @@ import:
 - package: github.com/progrium/go-basher
 - package: github.com/onsi/ginkgo
 - package: github.com/onsi/gomega
+- package: github.com/jhvhs/gob-mock
