--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -2,14 +2,10 @@ internal_ip: # Internal ip address of the BOSH director. Please select an availa
 
 deployments_network: # Network name to deploy service in your cloud config
 
-cf-tcp-router-name: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
-routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
-routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
-routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
-routing-cf-app-domain-name: # Cloud Foundry apps domain
-routing-cf-nats-internal-ips: # An array of internal IP address of Cloud Foundry NATS, e.g. [ '1.2.3.4' ]
-routing-cf-nats-username: nats
-routing-cf-nats-port: 4222
+# we use BOSH 261 since CredHub 0.4 supports only it
+# CredHub 0.4 fixes important bug that breaks deployment
+bosh_release_url: http://bosh.io/d/github.com/cloudfoundry/bosh?v=261.2 # URL to  261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
+bosh_release_sha1: d4635b4b82b0dc5fd083b83eb7e7405832f6654b # SHA1 of latest stable 261 bosh-director release
 
 credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
 
@@ -25,6 +21,24 @@ stemcell_url: # path to a stemcell used in all Kubo deployments
 
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
 kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest.tgz
+
+# IaaS routing mode settings
+# Comment this section when using CF routing mode
+routing_mode: iaas
+kubernetes_api_ip: # IP address that can be used to reach the Kubernetes API, usually the address of a load balancer
+master_target_pool: # target pool that master nodes will be a part of
+
+# CF routing mode settings
+# Uncomment and configure the lines below to leverage CF routing instead of IaaS routing
+# routing_mode: cf
+# cf-tcp-router-name: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
+# routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
+# routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
+# routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
+# routing-cf-app-domain-name: # Cloud Foundry apps domain
+# routing-cf-nats-internal-ips: # An array of internal IP address of Cloud Foundry NATS, e.g. [ '1.2.3.4' ]
+# routing-cf-nats-username: nats
+# routing-cf-nats-port: 4222
 
 # uncomment these fields to configure proxy settings for docker
 # http_proxy: # e.g. http://my.proxy.local:73636
