--- a/src/kubo-deployment-tests/resources/environments/secretless/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/secretless/director.yml
@@ -30,3 +30,5 @@ stemcell_url: # path to a stemcell used in all Kubo deployments
 
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
 kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
+
+routing_mode: cf
