--- a/src/kubo-deployment-tests/resources/environments/test_gcp/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_gcp/director.yml
@@ -25,9 +25,11 @@ external-kubo-port: 101928 # Port to use for Kubernetes API
 director_name: # user friendly Director name
 dns_recursor_ip: # DNS IP address for resolving non-BOSH hostnames
 
-stemcell_version: stemcell.version # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
+stemcell_version: stemcell.version.gcp # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
 stemcell_url: # path to a stemcell used in all Kubo deployments
 
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
 kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 
+routing_mode: iaas
+kubernetes_api_ip: 12.23.34.45
