--- a/src/kubo-deployment-tests/resources/environments/with_http_proxy/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/with_http_proxy/director.yml
@@ -33,3 +33,6 @@ kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 
 
 http_proxy: my.proxy.com
+
+routing_mode: iaas
+kubernetes_api_ip: 12.23.34.45
