--- a/src/kubo-deployment-tests/resources/environments/with_https_proxy/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/with_https_proxy/director.yml
@@ -31,5 +31,7 @@ stemcell_url: # path to a stemcell used in all Kubo deployments
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
 kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 
-
 https_proxy: my.sslproxy.com
+
+routing_mode: iaas
+kubernetes_api_ip: 12.23.34.45
