Revert "Use latest bosh-deployment"
This reverts commit 54e78221288a638e8d7775f24e9deb1ec6a27f45, reversing
changes made to 6772e985ecbe4982d1842fc01f3b632882d5412d.

--- a/bosh-deployment/bosh-lite-runc.yml
+++ b/bosh-deployment/bosh-lite-runc.yml
@@ -9,9 +9,9 @@
   path: /releases/-
   value:
     name: garden-runc
-    version: "1.1.1"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.1.1-ubuntu-trusty-3363.20-20170510-204541-66841608-20170510204546.tgz?versionId=lwHbhmoSvtIQ96YeUXWlpmBcrEV05aFl
-    sha1: c0598dd7662ac1d5897553a6faef360d0b6b806b
+    version: 1.1.1
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.1.1-ubuntu-trusty-3312.15-20170120-025258-725649478-20170120025303.tgz?versionId=LM5X6WRr_SSQkCpTDg197bRwr8YQxWqP
+    sha1: 72748d8ddad788f2092fe121e6944c90cfd3b5d2
 
 - type: replace
   path: /instance_groups/name=bosh/properties/garden
