--- a/bosh-deployment/aws/cloud-config.yml
+++ b/bosh-deployment/aws/cloud-config.yml
@@ -12,11 +12,11 @@ azs:
 vm_types:
 - name: default
   cloud_properties:
-    instance_type: m4.large
+    instance_type: m3.medium
     ephemeral_disk: {size: 25_000}
 - name: large
   cloud_properties:
-    instance_type: m4.xlarge
+    instance_type: m3.xlarge
     ephemeral_disk: {size: 50_000}
 
 disk_types:
@@ -33,7 +33,7 @@ networks:
     gateway: ((internal_gw))
     azs: [z1, z2, z3]
     dns: [8.8.8.8]
-    reserved: [((internal_gw))/30]
+    reserved: []
     cloud_properties:
       subnet: ((subnet_id))
 - name: vip
