--- a/bosh-deployment/powerdns.yml
+++ b/bosh-deployment/powerdns.yml
@@ -11,7 +11,7 @@
 - type: replace
   path: /instance_groups/name=bosh/properties/dns?
   value:
-    address: ((internal_ip))
+    address: 127.0.0.1
     db:
       database: powerdns
       host: 127.0.0.1
