--- a/configurations/vsphere/cloud-config.yml
+++ b/configurations/vsphere/cloud-config.yml
@@ -24,6 +24,12 @@ vm_types:
     cpu: 1
     disk: 20480
 
+- name: master
+  cloud_properties:
+    ram: 4096
+    cpu: 1
+    disk: 20480
+
 - name: worker
   cloud_properties:
     ram: 8192
