--- a/configurations/vsphere/cloud-config.yml
+++ b/configurations/vsphere/cloud-config.yml
@@ -3,7 +3,7 @@ azs:
 - name: z1
   cloud_properties:
     datacenters:
-    - clusters: [((vcenter_cluster)): {}]
+    - clusters: [((vcenter_cluster)): ((vcenter_rp))]
 
 networks:
 - name: &cloud_network ((deployments_network))
