--- a/bosh.yml
+++ b/bosh.yml
@@ -3,9 +3,9 @@ name: bosh
 
 releases:
 - name: bosh
-  version: "bosh-261.4+dev.1495815733"
-  url: https://s3.amazonaws.com/dk-shared-assets/bosh-261.4%2Bdev.1495815733-ubuntu-trusty-3421-20170526-115353-889873492.tgz
-  sha1: b3c8465300d9ee77f5f78b1edd021da2375cae33
+  version: "262"
+  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-262-ubuntu-trusty-3421.3-20170605-212657-350884764-20170605212702.tgz?versionId=7o7nryGyIKoHmwpl7TyQpISDqgm5qqLD
+  sha1: bec3fe2dbca517c06ffc6039baebdafba4aaabe4
 
 resource_pools:
 - name: vms
