lock down stemcell versions

--- a/ci/compiled-releases/pipeline.yml
+++ b/ci/compiled-releases/pipeline.yml
@@ -69,6 +69,8 @@ jobs:
           version:
             version: "261.4"
         - get: ubuntu-trusty-3363-stemcell
+          version:
+            version: "3363.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -87,6 +89,8 @@ jobs:
             version:
               version: "260.6"
           - get: ubuntu-trusty-3363-stemcell
+            version:
+              version: "3363.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -105,6 +109,8 @@ jobs:
             version:
               version: "257.24"
           - get: ubuntu-trusty-3363-stemcell
+            version:
+              version: "3363.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -123,6 +129,8 @@ jobs:
             version:
               version: "30.4"
           - get: ubuntu-trusty-3363-stemcell
+            version:
+              version: "3363.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -141,6 +149,8 @@ jobs:
             version:
               version: "24.11"
           - get: ubuntu-trusty-3363-stemcell
+            version:
+              version: "3363.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -159,6 +169,8 @@ jobs:
             version:
               version: "13.16"
           - get: ubuntu-trusty-3363-stemcell
+            version:
+              version: "3363.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -177,6 +189,8 @@ jobs:
             version:
               version: "40"
           - get: ubuntu-trusty-3421-stemcell
+            version:
+              version: "3421"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -195,6 +209,8 @@ jobs:
           version:
             version: "0.8.0"
         - get: ubuntu-trusty-3421-stemcell
+          version:
+            version: "3421"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -215,6 +231,8 @@ jobs:
             version:
               version: "34"
           - get: ubuntu-trusty-3421-stemcell
+            version:
+              version: "3421"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -233,6 +251,8 @@ jobs:
             version:
               version: "0.342.0"
           - get: ubuntu-trusty-3421-stemcell
+            version:
+              version: "3421"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -251,6 +271,8 @@ jobs:
             version:
               version: "1.1.1"
           - get: ubuntu-trusty-3421-stemcell
+            version:
+              version: "3421"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
