--- a/external-ip-with-registry-not-recommended.yml
+++ b/external-ip-with-registry-not-recommended.yml
@@ -31,7 +31,9 @@
   value: ((external_ip))
 
 - type: replace
-  path: /variables/name=director_ssl/options/alternative_names/-
+  path: /variables/name=mbus_bootstrap_ssl/options/alternative_names/-
   value: ((external_ip))
 
-# switch uaa to external_ip
+- type: replace
+  path: /variables/name=director_ssl/options/alternative_names/-
+  value: ((external_ip))
