--- a/azure/custom-environment.yml
+++ b/azure/custom-environment.yml
@@ -1,105 +1,4 @@
 ---
 - type: replace
-  path: /releases/-
-  value:
-    name: bosh-azure-cpi
-    version: 20
-    url: https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-azure-cpi-release?v=20
-    sha1: fb0180c685714d064b5a467eb6f2b34388fadf0a
-
-- type: replace
-  path: /resource_pools/name=vms/stemcell?
-  value:
-    url: https://bosh.io/d/stemcells/bosh-azure-hyperv-ubuntu-trusty-go_agent?v=3312.15
-    sha1: 109fae8106f8dba70f3dd6f1c5061907afb03757
-
-# Configure sizes
-- type: replace
-  path: /resource_pools/name=vms/cloud_properties?
-  value:
-    instance_type: Standard_D1
-
-- type: replace
-  path: /networks/name=default/subnets/0/cloud_properties?
-  value:
-    virtual_network_name: ((vnet_name))
-    subnet_name: ((subnet_name))
-
-# Enable registry job
-- type: replace
-  path: /instance_groups/name=bosh/jobs/-
-  value:
-    name: registry
-    release: bosh
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/registry?
-  value:
-    address: ((internal_ip))
-    host: ((internal_ip))
-    db: # todo remove
-      host: 127.0.0.1
-      user: postgres
-      password: ((postgres_password))
-      database: bosh
-      adapter: postgres
-    http:
-      user: registry
-      password: ((registry_password))
-      port: 25777
-    username: registry
-    password: ((registry_password))
-    port: 25777
-
-# Add CPI job
-- type: replace
-  path: /instance_groups/name=bosh/jobs/-
-  value: &cpi_job
-    name: azure_cpi
-    release: bosh-azure-cpi
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/director/cpi_job?
-  value: azure_cpi
-
-- type: replace
-  path: /cloud_provider/template?
-  value: *cpi_job
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/azure?
-  value: &cpi_conf
-    environment: ((environment))
-    subscription_id: ((subscription_id))
-    tenant_id: ((tenant_id))
-    client_id: ((client_id))
-    client_secret: ((client_secret))
-    resource_group_name: ((resource_group_name))
-    storage_account_name: ((storage_account_name))
-    default_security_group: ((default_security_group))
-    ssh_user: vcap
-    ssh_public_key: ((ssh.public_key))
-
-- type: replace
-  path: /cloud_provider/ssh_tunnel?
-  value:
-    host: ((internal_ip))
-    port: 22
-    user: vcap
-    private_key: ((ssh.private_key))
-
-- type: replace
-  path: /cloud_provider/properties/azure?
-  value: *cpi_conf
-
-- type: replace
-  path: /variables/-
-  value:
-    name: ssh
-    type: ssh
-
-- type: replace
-  path: /variables/-
-  value:
-    name: registry_password
-    type: password
+  path: /instance_groups/name=bosh/properties/azure?/environment?
+  value: ((environment))
