Make uaa http port disabled by default in favour of tls
Signed-off-by: Difan Zhao <dzhao@pivotal.io>

--- a/uaa.yml
+++ b/uaa.yml
@@ -31,6 +31,7 @@
     properties:
       uaa:
         url: "https://((internal_ip)):8443"
+        port: -1
         sslPrivateKey: ((uaa_ssl.private_key))
         sslCertificate: ((uaa_ssl.certificate))
         jwt:
