--- a/azure/custom-environment.yml
+++ b/azure/custom-environment.yml
@@ -1,4 +1,4 @@
 ---
 - type: replace
-  path: /instance_groups/name=bosh/properties/azure?/environment?
+  path: /instance_groups/name=bosh/properties/azure/environment
   value: ((environment))
