--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -117,3 +117,20 @@ variables:
   type: password
 - name: kubelet-password
   type: password
+- name: default_ca
+  type: certificate
+  options:
+    is_ca: true
+    common_name: ca
+- name: tls-kubelet
+  type: certificate
+  options:
+    ca: default_ca
+    common_name: ((cf-tcp-router-name))
+    alternative_names: [((cf-tcp-router-name))]
+- name: tls-kubernetes
+  type: certificate
+  options:
+    ca: default_ca
+    common_name: ((cf-tcp-router-name))
+    alternative_names: [((cf-tcp-router-name))]
