--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -117,7 +117,7 @@ variables:
   type: password
 - name: kubelet-password
   type: password
-- name: default_ca
+- name: kubo_ca
   type: certificate
   options:
     is_ca: true
@@ -125,12 +125,12 @@ variables:
 - name: tls-kubelet
   type: certificate
   options:
-    ca: default_ca
+    ca: kubo_ca
     common_name: ((cf-tcp-router-name))
     alternative_names: [((cf-tcp-router-name))]
 - name: tls-kubernetes
   type: certificate
   options:
-    ca: default_ca
+    ca: kubo_ca
     common_name: ((cf-tcp-router-name))
     alternative_names: [((cf-tcp-router-name))]
