Switching k8s tls certs to use the k8s api ip as the CN and SAN
Signed-off-by: Josh Winters <jwinters@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -126,11 +126,11 @@ variables:
   type: certificate
   options:
     ca: kubo_ca
-    common_name: ((cf-tcp-router-name))
-    alternative_names: [((cf-tcp-router-name))]
+    common_name: ((kubernetes_api_ip))
+    alternative_names: [((kubernetes_api_ip))]
 - name: tls-kubernetes
   type: certificate
   options:
     ca: kubo_ca
-    common_name: ((cf-tcp-router-name))
-    alternative_names: [((cf-tcp-router-name))]
+    common_name: ((kubernetes_api_ip))
+    alternative_names: [((kubernetes_api_ip))]
