--- a/manifests/ops-files/cf-routing.yml
+++ b/manifests/ops-files/cf-routing.yml
@@ -4,15 +4,34 @@
 - type: replace
   path: /instance_groups/name=master/jobs/name=kubernetes-system-specs/properties/kubernetes-api-url
   value: "https://((cf-tcp-router-name)):((external-kubo-port))"
+
 - type: replace
   path: /instance_groups/name=worker/jobs/name=kubeconfig/properties/kubernetes-api-url
   value: "https://((cf-tcp-router-name)):((external-kubo-port))"
+
 - type: replace
   path: /instance_groups/name=worker/jobs/name=kubelet/properties/kubernetes-api-url
   value: "https://((cf-tcp-router-name)):((external-kubo-port))"
+
 - type: replace
   path: /instance_groups/name=worker/jobs/name=kubernetes-proxy/properties/kubernetes-api-url
   value: "https://((cf-tcp-router-name)):((external-kubo-port))"
+
+- type: replace
+  path: /variables/name=tls-kubelet/options/common_name
+  value: ((cf-tcp-router-name))
+
+- type: replace
+  path: /variables/name=tls-kubelet/options/alternative_names
+  value: [((cf-tcp-router-name))]
+
+- type: replace
+  path: /variables/name=tls-kubernetes/options/common_name
+  value: ((cf-tcp-router-name))
+
+- type: replace
+  path: /variables/name=tls-kubernetes/options/alternative_names
+  value: [((cf-tcp-router-name))]
 
 - type: replace
   path: /instance_groups/name=master/jobs/-
