--- a/configurations/generic/credhub.yml
+++ b/configurations/generic/credhub.yml
@@ -63,7 +63,7 @@
   value:
     enabled: true
     url: "https://((internal_ip)):8844/api/" # URL must contain /api/ path with trailing slash
-    ca_cert: ((config_server_ssl.ca))
+    ca_cert: ((credhub_tls.ca))
     uaa:
       url: "https://((internal_ip)):8443"
       ca_cert: ((uaa_ssl.ca))
@@ -99,7 +99,7 @@
 - type: replace
   path: /variables/-
   value:
-    name: config_server_ssl
+    name: credhub_tls
     type: certificate
     options:
       ca: default_ca
